manifests/netbox/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netbox
  labels:
    app.kubernetes.io/name: netbox
    app.kubernetes.io/component: ipam
