manifests/netbox/06-netbox-service-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbox
  namespace: netbox
  labels:
    app.kubernetes.io/name: netbox
    app.kubernetes.io/component: ipam
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
  selector:
    app.kubernetes.io/name: netbox
