manifests/netbox/07-netbox-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbox-lb
  namespace: netbox
  labels:
    app.kubernetes.io/name: netbox
    app.kubernetes.io/component: ipam
spec:
  type: LoadBalancer
  # IP will be auto-assigned from MetalLB pool
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
  selector:
    app.kubernetes.io/name: netbox
